# android-llama-inference

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib-new.cpp  native-lib-old.cpp  native-lib.cpp
android/app/src/main/kotlin/com/example/gemma_app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_new.dart  main_old.dart
lib/models/: chat_message.dart  model_config.dart
lib/screens/: chat_screen.dart  model_management_screen.dart
lib/services/: llama_ffi.dart  llama_service.dart  model_manager.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
